zetasql/parser/testdata/create_row_access_policy.test
create row access policy on t1 grant to ('foo@google.com') filter using(c1 = 'foo');
--
CreateRowAccessPolicyStatement [0-83] [create row...c1 = 'foo')]
  PathExpression [28-30] [t1]
    Identifier(t1) [28-30] [t1]
  GrantToClause [31-58] [grant to ('foo@google.com')]
    GranteeList [41-57] ['foo@google.com']
      StringLiteral('foo@google.com') [41-57] ['foo@google.com']
  FilterUsingClause [59-83] [filter using(c1 = 'foo')]
    BinaryExpression(=) [72-82] [c1 = 'foo']
      PathExpression [72-74] [c1]
        Identifier(c1) [72-74] [c1]
      StringLiteral('foo') [77-82] ['foo']
--
CREATE ROW ACCESS POLICY ON t1 GRANT TO ('foo@google.com') FILTER USING (c1 = 'foo')
==

create row access policy p1 on t1 grant to ('mdbuser/bar') filter using(c2 = 'foo');
--
CreateRowAccessPolicyStatement [0-83] [create row...c2 = 'foo')]
  PathExpression [31-33] [t1]
    Identifier(t1) [31-33] [t1]
  GrantToClause [34-58] [grant to ('mdbuser/bar')]
    GranteeList [44-57] ['mdbuser/bar']
      StringLiteral('mdbuser/bar') [44-57] ['mdbuser/bar']
  FilterUsingClause [59-83] [filter using(c2 = 'foo')]
    BinaryExpression(=) [72-82] [c2 = 'foo']
      PathExpression [72-74] [c2]
        Identifier(c2) [72-74] [c2]
      StringLiteral('foo') [77-82] ['foo']
  PathExpression [25-27] [p1]
    Identifier(p1) [25-27] [p1]
--
CREATE ROW ACCESS POLICY p1 ON t1 GRANT TO ('mdbuser/bar') FILTER USING (c2 = 'foo')
==

create row access policy on t1 grant to ('foo@google.com', 'mdbgroup/bar') filter using(c1);
--
CreateRowAccessPolicyStatement [0-91] [create row...using(c1)]
  PathExpression [28-30] [t1]
    Identifier(t1) [28-30] [t1]
  GrantToClause [31-74] [grant to (...mdbgroup/bar')]
    GranteeList [41-73] ['foo@google...mdbgroup/bar']
      StringLiteral('foo@google.com') [41-57] ['foo@google.com']
      StringLiteral('mdbgroup/bar') [59-73] ['mdbgroup/bar']
  FilterUsingClause [75-91] [filter using(c1)]
    PathExpression [88-90] [c1]
      Identifier(c1) [88-90] [c1]
--
CREATE ROW ACCESS POLICY ON t1 GRANT TO ('foo@google.com', 'mdbgroup/bar') FILTER USING (c1)
==

create row access policy on n1.t1 grant to ('foo@google.com', 'mdbgroup/bar') filter using(c1);
--
CreateRowAccessPolicyStatement [0-94] [create row...using(c1)]
  PathExpression [28-33] [n1.t1]
    Identifier(n1) [28-30] [n1]
    Identifier(t1) [31-33] [t1]
  GrantToClause [34-77] [grant to (...mdbgroup/bar')]
    GranteeList [44-76] ['foo@google...mdbgroup/bar']
      StringLiteral('foo@google.com') [44-60] ['foo@google.com']
      StringLiteral('mdbgroup/bar') [62-76] ['mdbgroup/bar']
  FilterUsingClause [78-94] [filter using(c1)]
    PathExpression [91-93] [c1]
      Identifier(c1) [91-93] [c1]
--
CREATE ROW ACCESS POLICY ON n1.t1 GRANT TO ('foo@google.com', 'mdbgroup/bar') FILTER USING (c1)
==

create row access policy on n1.t1 grant to ('foo@google.com', 'mdbgroup/bar') filter using(1);
--
CreateRowAccessPolicyStatement [0-93] [create row...filter using(1)]
  PathExpression [28-33] [n1.t1]
    Identifier(n1) [28-30] [n1]
    Identifier(t1) [31-33] [t1]
  GrantToClause [34-77] [grant to (...mdbgroup/bar')]
    GranteeList [44-76] ['foo@google...mdbgroup/bar']
      StringLiteral('foo@google.com') [44-60] ['foo@google.com']
      StringLiteral('mdbgroup/bar') [62-76] ['mdbgroup/bar']
  FilterUsingClause [78-93] [filter using(1)]
    IntLiteral(1) [91-92] [1]
--
CREATE ROW ACCESS POLICY ON n1.t1 GRANT TO ('foo@google.com', 'mdbgroup/bar') FILTER USING (1)
==

create row access policy on n1.t1 grant to ('foo@google.com', 'mdbgroup/bar';
--
ERROR: Syntax error: Expected ")" or "," but got ";" [at 1:77]
create row access policy on n1.t1 grant to ('foo@google.com', 'mdbgroup/bar';
                                                                            ^
==

create row access policy on n1.t1) filter using(true);
--
ERROR: Syntax error: Expected keyword USING but got ")" [at 1:34]
create row access policy on n1.t1) filter using(true);
                                 ^
==

create row access policy grant to ('mdbuser/foo') filter using(true);
--
ERROR: Syntax error: Expected keyword ON but got keyword TO [at 1:32]
create row access policy grant to ('mdbuser/foo') filter using(true);
                               ^
==

create row access policy on t1 grant to (foo) filter using(true);
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "foo" [at 1:42]
create row access policy on t1 grant to (foo) filter using(true);
                                         ^
==

create policy on t1 grant to ('foo@google.com') filter using(true);
--
ERROR: Syntax error: Expected keyword FUNCTION but got keyword POLICY [at 1:8]
create policy on t1 grant to ('foo@google.com') filter using(true);
       ^
==

# CREATE scope modifiers (TEMP, PUBLIC, PRIVATE) are not allowed for
# CREATE ROW POLICY.
create {{temp|temporary|public|private}} row access policy on t1
grant to ('foo@google.com') filter using(true);
--
ALTERNATION GROUP: temp
--
ERROR: Syntax error: Expected keyword FUNCTION but got keyword ROW [at 1:13]
create temp row access policy on t1
            ^
--
ALTERNATION GROUP: temporary
--
ERROR: Syntax error: Expected keyword FUNCTION but got keyword ROW [at 1:18]
create temporary row access policy on t1
                 ^
--
ALTERNATION GROUP: public
--
ERROR: Syntax error: Expected keyword FUNCTION but got keyword ROW [at 1:15]
create public row access policy on t1
              ^
--
ALTERNATION GROUP: private
--
ERROR: Syntax error: Expected keyword FUNCTION but got keyword ROW [at 1:16]
create private row access policy on t1
               ^
==

create row access policy on t1 @{a=1} grant to ('foo@google.com') filter using(true);
--
ERROR: Syntax error: Expected keyword USING but got "@" [at 1:32]
create row access policy on t1 @{a=1} grant to ('foo@google.com') filter usin...
                               ^
==

create row access policy on t1 grant to (@test_param_string) filter using(true);
--
CreateRowAccessPolicyStatement [0-79] [create row...using(true)]
  PathExpression [28-30] [t1]
    Identifier(t1) [28-30] [t1]
  GrantToClause [31-60] [grant to (@test_param_string)]
    GranteeList [41-59] [@test_param_string]
      ParameterExpr [41-59] [@test_param_string]
        Identifier(test_param_string) [42-59] [test_param_string]
  FilterUsingClause [61-79] [filter using(true)]
    BooleanLiteral(true) [74-78] [true]
--
CREATE ROW ACCESS POLICY ON t1 GRANT TO (@test_param_string) FILTER USING (true)
==

# Test edge cases in GRANTEE LIST.
create row access policy on t1 grant to ({{|concat("mdbuser/", "foo")|NULL|""|1}}) filter using(true);
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got ")" [at 1:42]
create row access policy on t1 grant to () filter using(true);
                                         ^
--
ALTERNATION GROUP: concat("mdbuser/", "foo")
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "concat" [at 1:42]
create row access policy on t1 grant to (concat("mdbuser/", "foo")) filter us...
                                         ^
--
ALTERNATION GROUP: NULL
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got keyword NULL [at 1:42]
create row access policy on t1 grant to (NULL) filter using(true);
                                         ^
--
ALTERNATION GROUP: ""
--
CreateRowAccessPolicyStatement [0-63] [create row...using(true)]
  PathExpression [28-30] [t1]
    Identifier(t1) [28-30] [t1]
  GrantToClause [31-44] [grant to ("")]
    GranteeList [41-43] [""]
      StringLiteral("") [41-43] [""]
  FilterUsingClause [45-63] [filter using(true)]
    BooleanLiteral(true) [58-62] [true]
--
CREATE ROW ACCESS POLICY ON t1 GRANT TO ("") FILTER USING (true)
--
ALTERNATION GROUP: 1
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got integer literal "1" [at 1:42]
create row access policy on t1 grant to (1) filter using(true);
                                         ^
==

# Test GRANTEE LIST must have a list / parentheses.
create row access policy on t1 grant to {{|concat("mdbuser/", "foo")|NULL|""|1}} filter using(true);
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Expected "(" but got keyword FILTER [at 1:42]
create row access policy on t1 grant to  filter using(true);
                                         ^
--
ALTERNATION GROUP: concat("mdbuser/", "foo")
--
ERROR: Syntax error: Expected "(" but got identifier "concat" [at 1:41]
create row access policy on t1 grant to concat("mdbuser/", "foo") filter usin...
                                        ^
--
ALTERNATION GROUP: NULL
--
ERROR: Syntax error: Expected "(" but got keyword NULL [at 1:41]
create row access policy on t1 grant to NULL filter using(true);
                                        ^
--
ALTERNATION GROUP: ""
--
ERROR: Syntax error: Expected "(" but got string literal "" [at 1:41]
create row access policy on t1 grant to "" filter using(true);
                                        ^
--
ALTERNATION GROUP: 1
--
ERROR: Syntax error: Expected "(" but got integer literal "1" [at 1:41]
create row access policy on t1 grant to 1 filter using(true);
                                        ^
==

# Test that the GRANT TO clause is optional.
create row access policy p1 on t1 filter using(true);
--
CreateRowAccessPolicyStatement [0-52] [create row...using(true)]
  PathExpression [31-33] [t1]
    Identifier(t1) [31-33] [t1]
  FilterUsingClause [34-52] [filter using(true)]
    BooleanLiteral(true) [47-51] [true]
  PathExpression [25-27] [p1]
    Identifier(p1) [25-27] [p1]
--
CREATE ROW ACCESS POLICY p1 ON t1 FILTER USING (true)
==

# Test that new keywords are all optional.
create row {{access|}} policy p1 on t1 {{grant|}} to ("bar@google.com") {{filter|}} using (region = "us");
--
ALTERNATION GROUP: access,grant,filter
--
CreateRowAccessPolicyStatement [0-90] [create row...region = "us")]
  PathExpression [31-33] [t1]
    Identifier(t1) [31-33] [t1]
  GrantToClause [34-61] [grant to ("bar@google.com")]
    GranteeList [44-60] ["bar@google.com"]
      StringLiteral("bar@google.com") [44-60] ["bar@google.com"]
  FilterUsingClause [62-90] [filter using (region = "us")]
    BinaryExpression(=) [76-89] [region = "us"]
      PathExpression [76-82] [region]
        Identifier(region) [76-82] [region]
      StringLiteral("us") [85-89] ["us"]
  PathExpression [25-27] [p1]
    Identifier(p1) [25-27] [p1]
--
CREATE ROW ACCESS POLICY p1 ON t1 GRANT TO ("bar@google.com") FILTER USING (region = "us")
--
ALTERNATION GROUP: access,grant,
--
CreateRowAccessPolicyStatement [0-84] [create row...region = "us")]
  PathExpression [31-33] [t1]
    Identifier(t1) [31-33] [t1]
  GrantToClause [34-61] [grant to ("bar@google.com")]
    GranteeList [44-60] ["bar@google.com"]
      StringLiteral("bar@google.com") [44-60] ["bar@google.com"]
  FilterUsingClause [61-84] [using (region = "us")]
    BinaryExpression(=) [70-83] [region = "us"]
      PathExpression [70-76] [region]
        Identifier(region) [70-76] [region]
      StringLiteral("us") [79-83] ["us"]
  PathExpression [25-27] [p1]
    Identifier(p1) [25-27] [p1]
--
CREATE ROW ACCESS POLICY p1 ON t1 GRANT TO ("bar@google.com") USING (region = "us")
--
ALTERNATION GROUP: access,,filter
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got "(" [at 1:39]
create row access policy p1 on t1  to ("bar@google.com") filter using (region...
                                      ^
--
ALTERNATION GROUP: access,,
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got "(" [at 1:39]
create row access policy p1 on t1  to ("bar@google.com")  using (region = "us");
                                      ^
--
ALTERNATION GROUP: grant,filter
--
CreateRowAccessPolicyStatement [0-84] [create row...region = "us")]
  PathExpression [25-27] [t1]
    Identifier(t1) [25-27] [t1]
  GrantToClause [28-55] [grant to ("bar@google.com")]
    GranteeList [38-54] ["bar@google.com"]
      StringLiteral("bar@google.com") [38-54] ["bar@google.com"]
  FilterUsingClause [56-84] [filter using (region = "us")]
    BinaryExpression(=) [70-83] [region = "us"]
      PathExpression [70-76] [region]
        Identifier(region) [70-76] [region]
      StringLiteral("us") [79-83] ["us"]
  PathExpression [19-21] [p1]
    Identifier(p1) [19-21] [p1]
--
CREATE ROW POLICY p1 ON t1 GRANT TO ("bar@google.com") FILTER USING (region = "us")
--
ALTERNATION GROUP: grant,
--
CreateRowAccessPolicyStatement [0-78] [create row...region = "us")]
  PathExpression [25-27] [t1]
    Identifier(t1) [25-27] [t1]
  GrantToClause [28-55] [grant to ("bar@google.com")]
    GranteeList [38-54] ["bar@google.com"]
      StringLiteral("bar@google.com") [38-54] ["bar@google.com"]
  FilterUsingClause [55-78] [using (region = "us")]
    BinaryExpression(=) [64-77] [region = "us"]
      PathExpression [64-70] [region]
        Identifier(region) [64-70] [region]
      StringLiteral("us") [73-77] ["us"]
  PathExpression [19-21] [p1]
    Identifier(p1) [19-21] [p1]
--
CREATE ROW POLICY p1 ON t1 GRANT TO ("bar@google.com") USING (region = "us")
--
ALTERNATION GROUP: filter
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got "(" [at 1:33]
create row  policy p1 on t1  to ("bar@google.com") filter using (region = "us");
                                ^
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got "(" [at 1:33]
create row  policy p1 on t1  to ("bar@google.com")  using (region = "us");
                                ^
